fix: standardize code formatting and improve consistency across multiple files

--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -23,8 +23,8 @@
           {{ schoolProfile?.name }}
         </h6>
         <span class="school_address sub_title">
-          {{ schoolProfile?.town | capitalize}},
-          {{ schoolProfile?.city | capitalize}}
+          {{ schoolProfile?.town | capitalize }},
+          {{ schoolProfile?.city | capitalize }}
           @if (schoolProfile?.state) {
             ({{ states[schoolProfile?.state?.toUpperCase() || ''] }})
           }
@@ -47,17 +47,20 @@
       <mat-icon class="close_mobile_menu position-absolute" (click)="drawer.toggle()"> close </mat-icon>
     }
 
-    <div class="position-absolute w-100" [ngStyle]="{ display: screenObserver.isMobile ? 'initial' : 'none', bottom: '1rem' }">
+    <div
+      class="position-absolute w-100"
+      [ngStyle]="{ display: screenObserver.isMobile ? 'initial' : 'none', bottom: '1rem' }"
+    >
       <div class="d-flex profile_option ps-3">
         <ng-container [ngTemplateOutlet]="profile_card"></ng-container>
         <div class="d-flex justify-content-end w-100 py-3 pe-3">
           @if (loggedInUser?.role == 'admin') {
             <div class="user_profile_actions d-flex align-items-between" [routerLink]="'./preferance'">
-              <mat-icon>settings</mat-icon>Preferance
+              <mat-icon>settings</mat-icon>
             </div>
           } @else {
             <div class="user_profile_actions d-flex align-items-between" [routerLink]="'./edit-profile'">
-              <mat-icon>edit</mat-icon>edit
+              <mat-icon>edit</mat-icon>
             </div>
           }
         </div>
