--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -103,7 +103,7 @@
                 >
               </div>
             </div>
-            <div class="mobile_font text-sm d-flex align-items-center">
+            <div class="mobile_font d-flex align-items-center text-sm">
               <div class="col">
                 <mat-checkbox formControlName="remember">
                   <span class="text-sm"> Remember me? </span>
