--- a/src/app/core/modules/forms/select-element/select-element.component.html
+++ b/src/app/core/modules/forms/select-element/select-element.component.html
@@ -30,9 +30,9 @@
     >
       @if (elem.allowMultiple) {
         <mat-select-trigger>
-          {{ (cntrl.value?.[0]?.label) || '' }}
+          {{ cntrl.value?.[0]?.label || '' }}
           @if ((cntrl.value?.length || 0) > 1) {
-            , {{ (cntrl.value?.[1]?.label) || '' }}
+            , {{ cntrl.value?.[1]?.label || '' }}
             @if ((cntrl.value?.length || 0) > 2) {
               <span>
                 (+{{ (cntrl.value?.length || 0) - 2 }} {{ cntrl.value?.length === 3 ? 'other' : 'others' }})
@@ -45,13 +45,17 @@
         @for (group of elem.categoriesList; track group.category) {
           <mat-optgroup [label]="group.category" [disabled]="group.disabled">
             @for (option of group.options; track option) {
-              <mat-option [title]="option.label" [value]="elem.allowMultiple ? option : option.key">{{ capitalizeWords(option.label) }}</mat-option>
+              <mat-option [title]="option.label" [value]="elem.allowMultiple ? option : option.key">{{
+                capitalizeWords(option.label)
+              }}</mat-option>
             }
           </mat-optgroup>
         }
       } @else {
         @for (option of options(); track option.key) {
-          <mat-option [title]="option.label" [value]="elem.allowMultiple ? option : option.key">{{ capitalizeWords(option.label) }}</mat-option>
+          <mat-option [title]="option.label" [value]="elem.allowMultiple ? option : option.key">{{
+            capitalizeWords(option.label)
+          }}</mat-option>
         }
       }
     </mat-select>
