--- a/src/app/modules/admin/modules/classes/class-list/class-list.component.html
+++ b/src/app/modules/admin/modules/classes/class-list/class-list.component.html
@@ -1,11 +1,13 @@
 <section>
-  <div class="container add-shift-container">
-      <div class="d-flex flex-column content-center items-center gap-3" (click)="openShiftDialog()">
-        <button mat-mini-fab class="add-shift ">
-          <mat-icon class="font-extralight">add_circle</mat-icon>
-        </button>
-        <div class="text-lg"> <strong> Set up your shift</strong></div>
-        <div class="text-neutral-400 text-center"> Set up shifts to organize your classes.<br>You’ll be able to assign specific class timings and breaks later.</div>
+  <div class="add-shift-container container">
+    <div class="d-flex flex-column content-center items-center gap-3" (click)="openShiftDialog()">
+      <button mat-mini-fab class="add-shift">
+        <mat-icon class="font-extralight">add_circle</mat-icon>
+      </button>
+      <div class="text-lg"><strong> Set up your shift</strong></div>
+      <div class="text-center text-neutral-400">
+        Set up shifts to organize your classes.<br />You’ll be able to assign specific class timings and breaks later.
+      </div>
     </div>
   </div>
 </section>
