--- a/src/app/modules/admin/modules/students/list/list.component.html
+++ b/src/app/modules/admin/modules/students/list/list.component.html
@@ -1,8 +1,8 @@
 @let students = students$ | async;
-@if(students) {
-<sc-table [data]="students" [config]="tableConfig" (buttonClick)="buttonClick($event)">
-    <div action-handler class="col text-end py-2">
-        <button mat-raised-button color="primary" [routerLink]="'./add'"> Enroll Student </button>
+@if (students) {
+  <sc-table [data]="students" [config]="tableConfig" (buttonClick)="buttonClick($event)">
+    <div action-handler class="col py-2 text-end">
+      <button mat-raised-button color="primary" [routerLink]="'./add'">Enroll Student</button>
     </div>
-</sc-table>
+  </sc-table>
 }
