--- a/src/app/modules/admin/modules/teachers/list/list.component.html
+++ b/src/app/modules/admin/modules/teachers/list/list.component.html
@@ -1,8 +1,8 @@
 @let teachers = teachers$ | async;
-@if(teachers) {
-    <sc-table [data]="teachers" [config]="tableConfig" (buttonClick)="buttonClick($event)">
-        <div action-handler class="col text-end py-2">
-            <button mat-raised-button color="primary" [routerLink]="'./add'"> +Add Teacher </button>
-        </div>
-    </sc-table>
+@if (teachers) {
+  <sc-table [data]="teachers" [config]="tableConfig" (buttonClick)="buttonClick($event)">
+    <div action-handler class="col py-2 text-end">
+      <button mat-raised-button color="primary" [routerLink]="'./add'">+Add Teacher</button>
+    </div>
+  </sc-table>
 }
