--- a/src/app/core/modules/forms/date-element/date-element.component.html
+++ b/src/app/core/modules/forms/date-element/date-element.component.html
@@ -1,4 +1,9 @@
-<mat-label>{{ element().label }}</mat-label>
+<mat-label
+  >{{ element().label }}
+  @if(element().required){
+    <span [ngStyle]="{ color: control().errors ? 'red' : 'black' }">&nbsp;*</span>
+  }
+</mat-label>
 <mat-form-field [style]="element().width ? { width: element().width } : { width: '100%' }">
   <input
     matInput
@@ -8,6 +13,7 @@
     [formControl]="control()"
     [required]="element().required || false"
     [matDatepickerFilter]="filter"
+    [placeholder]="element().placeholder || ''"
   />
   @if (control().errors) {
     <mat-error>
