feat: add FormArray support to form model and components

--- a/src/app/core/modules/forms/form-element/form-element.component.html
+++ b/src/app/core/modules/forms/form-element/form-element.component.html
@@ -68,4 +68,7 @@
       }
     </div>
   }
+  @case ('form-array') {
+    <sc-form-array [dynamicListOptions]="dynamicListOptions()" [formConfig]="element.element.config" [formArraySignal]="$any(control())"></sc-form-array>
+  }
 }
