--- a/src/app/core/modules/chat/component/chat-card/chat-card.component.html
+++ b/src/app/core/modules/chat/component/chat-card/chat-card.component.html
@@ -1,4 +1,15 @@
 @let _chat = chat();
+@let currentUser = user$ | async;
 
-{{ _chat.sender.email }}
-{{ _chat.content }}
+@if(currentUser) {
+  @let user = _chat.sender.id === currentUser.id ? _chat.recipient : _chat.sender;
+  <mat-card class="m-0 flex items-start content-center space-x-4 hover:bg-indigo-100 cursor-pointer p-1 bg-transparent shadow-none">
+      <div class="w-100">
+        <div class="flex justify-between w-100 items-center">
+            <h3 class="font-semibold text-sm">{{ user?.name }}</h3>
+            <div class="text-xs"> {{_chat.createdAt | timeAgo}} </div>
+        </div>
+        <p class="text-sm text-gray-600 truncate w-full">{{ _chat.content }}</p>
+      </div>
+    </mat-card>
+}
