--- a/src/app/core/modules/chat/component/chat-header/chat-header.component.html
+++ b/src/app/core/modules/chat/component/chat-header/chat-header.component.html
@@ -1,1 +1,5 @@
-<p>chat-header works!</p>
+<div class="flex items-center justify-between p-1 bg-indigo-600 text-white">
+    <h2 class="text-xl font-semibold">{{ 'chatName' }}</h2>
+    <span class="text-sm">{{ 'status' }}</span>
+  </div>
+  
