--- a/src/app/core/modules/chat/component/chat-input/chat-input.component.html
+++ b/src/app/core/modules/chat/component/chat-input/chat-input.component.html
@@ -1,1 +1,8 @@
-<p>chat-input works!</p>
+<div class="p-4 pb-0 items-center bg-gray-50 flex border-t">
+  <mat-form-field class="w-full" appearance="fill">
+    <textarea matInput [formControl]="input" placeholder="Type a message..." [attr.resize]="false" rows="1"></textarea>
+  </mat-form-field>
+  <button mat-icon-button (click)="sendMessage()" class="text-indigo-600 p-3 pt-0">
+    <mat-icon>send</mat-icon>
+  </button>
+</div>
