--- a/src/app/core/modules/chat/component/chat-list/chat-list.component.html
+++ b/src/app/core/modules/chat/component/chat-list/chat-list.component.html
@@ -1,5 +1,7 @@
 @let chatsList = chatsList$ | async;
 
-@for (chat of chatsList; track chat.id) {
-  <sc-chat-card [chat]="chat"></sc-chat-card> <br />
-}
+<mat-list class="">
+  @for (chat of chatsList; track chat.id) {
+    <sc-chat-card [chat]="chat"></sc-chat-card>
+  }
+</mat-list>
