feat: add DeepCopyPipe for deep cloning objects and update form components to utilize it

--- a/src/app/core/modules/forms/form-array/form-array.component.html
+++ b/src/app/core/modules/forms/form-array/form-array.component.html
@@ -7,8 +7,8 @@
         </button>
       }
       <sc-form
-        [formGroup]="formArray.controls[$index]"
-        [formConfig]="formConfig()"
+        [_formGroup]="formArray.controls[$index]"
+        [formConfig]="formConfig() | deepCopy"
         [dynamicListOptions]="dynamicListOptions()"
         [customDateClasses]="customDateClasses()"
         [dateFilters]="dateFilters()"
