--- a/src/app/core/modules/chat/component/chat-header/chat-header.component.html
+++ b/src/app/core/modules/chat/component/chat-header/chat-header.component.html
@@ -1,5 +1,4 @@
-<div class="flex items-center justify-between p-1 bg-indigo-600 text-white">
-    <h2 class="text-xl font-semibold">{{ 'chatName' }}</h2>
-    <span class="text-sm">{{ 'status' }}</span>
-  </div>
-  
+<div class="flex items-center justify-between bg-indigo-600 p-1 text-white">
+  <h2 class="text-xl font-semibold">{{ 'chatName' }}</h2>
+  <span class="text-sm">{{ 'status' }}</span>
+</div>
