--- a/src/app/core/modules/chat/component/chat-layout/chat-layout.component.html
+++ b/src/app/core/modules/chat/component/chat-layout/chat-layout.component.html
@@ -1,14 +1,13 @@
 <div class="flex h-screen">
-    <!-- Chat List Section -->
-    <div class="w-64 bg-gray-100 p-4 overflow-y-auto">
-      <sc-chat-list></sc-chat-list>
-    </div>
-  
-    <!-- Chat Body Section -->
-    <div class="flex-1 bg-white flex flex-col">
-      <sc-chat-header class="bg-indigo-600 text-white py-1 px-3"></sc-chat-header>
-      <sc-chat-body class="flex-1 overflow-y-auto p-4"></sc-chat-body>
-      <sc-chat-input></sc-chat-input>
-    </div>
+  <!-- Chat List Section -->
+  <div class="w-64 overflow-y-auto bg-gray-100 p-4">
+    <sc-chat-list></sc-chat-list>
   </div>
-  
+
+  <!-- Chat Body Section -->
+  <div class="flex flex-1 flex-col bg-white">
+    <sc-chat-header class="bg-indigo-600 px-3 py-1 text-white"></sc-chat-header>
+    <sc-chat-body class="flex-1 overflow-y-auto p-4"></sc-chat-body>
+    <sc-chat-input></sc-chat-input>
+  </div>
+</div>
