--- a/src/app/core/modules/chat/component/chat-body/chat-body.component.html
+++ b/src/app/core/modules/chat/component/chat-body/chat-body.component.html
@@ -1,3 +1,9 @@
 <div class="flex flex-col space-y-4 overflow-y-auto">
-  <sc-chat></sc-chat>
+  <mat-list class="space-y-4">
+    @for (chat of chats() || []; track chat.id) {
+      <mat-list-item class="flex items-center space-x-2">
+        <sc-chat [chat]="chat"></sc-chat>
+      </mat-list-item>
+    }
+  </mat-list>
 </div>
