--- a/src/app/core/modules/chat/component/chat-layout/chat-layout.component.html
+++ b/src/app/core/modules/chat/component/chat-layout/chat-layout.component.html
@@ -1,13 +1,22 @@
-<div class="flex h-screen">
-  <!-- Chat List Section -->
-  <div class="w-64 overflow-y-auto bg-gray-100 p-4">
-    <sc-chat-list></sc-chat-list>
-  </div>
+@let chatList = chatList$ | async;
+@let chats = chats$ | async;
+@let selected = selectedUser$ | async;
+@let currentUser = loggedInUser$ | async;
 
-  <!-- Chat Body Section -->
-  <div class="flex flex-1 flex-col bg-white">
-    <sc-chat-header class="bg-indigo-600 px-3 py-1 text-white"></sc-chat-header>
-    <sc-chat-body class="flex-1 overflow-y-auto p-4"></sc-chat-body>
-    <sc-chat-input></sc-chat-input>
+@if (currentUser) {
+  <div class="flex h-screen">
+    <!-- Chat List Section -->
+    <div class="w-64 overflow-y-auto bg-gray-100 p-4">
+      <sc-chat-list [list]="chatList || []" [loggedInUser]="currentUser"></sc-chat-list>
+    </div>
+  
+    <!-- Chat Body Section -->
+     @if (chats) {
+       <div class="flex flex-1 flex-col bg-white">
+         <sc-chat-header [selected]="selected" class="bg-indigo-600 px-3 py-1 text-white"></sc-chat-header>
+         <sc-chat-body [chats]="chats" class="flex-1 overflow-y-auto p-4"></sc-chat-body>
+         <sc-chat-input [loggedInUser]="currentUser" [recipient]="selected"></sc-chat-input>
+       </div>
+     }
   </div>
-</div>
+}
